--- a/templates/search/overdue.tmpl
+++ b/templates/search/overdue.tmpl
@@ -64,12 +64,6 @@ $('document').ready(function(){
 
 <div role="main">
 
-    <h2>Instructions</h2>
-    <ol>
-      <li>You will need to contact these patrons.</li>
-      <li>Items will be removed from the overdue list when you mark them as 'Returned' on the Returns screen.</li>
-    </ol>
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
@@ -79,6 +73,14 @@ $('document').ready(function(){
       <h3>Overdues (items borrowed through ILL that are now overdue)</h3>
       <div id="mylistDiv"></div>
     </div>
+
+<div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>You will need to contact these patrons.</li>
+      <li>Items will be removed from the overdue list when you mark them as 'Returned' on the Returns screen.</li>
+    </ol>
+</div>
 
 </div>
 
