--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -70,18 +70,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>If your due date is the same for all (or most) requests you are renewing, enter that as the "default due date".</li>
-      <li>For each of the requests that you are renewing, click the "Renew OK" button.</li>
-      <li>For each remaining request - those that will be unfilled - click the "Can't renew".</li>
-    </ol>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -108,6 +97,13 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
+  <div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>If your due date is the same for all (or most) requests you are renewing, enter that as the "default due date".</li>
+      <li>For each of the requests that you are renewing, click the "Renew OK" button.</li>
+      <li>For each remaining request - those that will be unfilled - click the "Can't renew".</li>
+    </ol>
   </div>
 
 </div>
