--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -69,6 +69,11 @@
   	display: inline ;
 }
 
+#instructions {
+    margin-bottom: 1em;
+    display: block;
+    padding: 1.25em; 
+}
 /***---End of new library client side CSS--**/
 
 
