--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -30,22 +30,8 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>Enter your patron's barcode or a group identifier.</li>
-      <li>Fill in the number of copies you'd like.</li>
-      <li>Select whether you are asking for a hold to be placed.</li>
-      <li>Enter any additiona notes that may help the lender.</li>
-      <li>Click the "Complete the request" button</li>
-    </ol>
-    <h2>Information</h2>
-    <p>fILL asks for your patron's barcode number so you'll be able to look up your patron when the item arrives.</p>
-  </div>
-
-  <div id="middlecontent">
     <form action="/cgi-bin/lightning.cgi" method="post">
       <div id="midcolumncontainer">
 	<div id="midleft">
@@ -127,7 +113,18 @@ $('document').ready(function(){
 	</table>
       </div>
     </div>
-    
+
+  <div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>Enter your patron's barcode or a group identifier.</li>
+      <li>Fill in the number of copies you'd like.</li>
+      <li>Select whether you are asking for a hold to be placed.</li>
+      <li>Enter any additiona notes that may help the lender.</li>
+      <li>Click the "Complete the request" button</li>
+    </ol>
+    <h2>Information</h2>
+    <p>fILL asks for your patron's barcode number so you'll be able to look up your patron when the item arrives.</p>
   </div>
 
 </div>
