--- a/templates/search/no_response.tmpl
+++ b/templates/search/no_response.tmpl
@@ -66,15 +66,6 @@ $('document').ready(function(){
 
 <div role="main">
 
-    <h2>Instructions</h2>
-    <ul>
-      <li>If a lending library has not yet responded to your request, that request will be shown here.</li>
-      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</li>
-      <li>You'll also have the option to cancel the request.</li>
-      <li>Remember that not all libraries are open every day; it may take a few days to get a response.</li>
-      <li>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</li>
-    </ul>
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
@@ -83,6 +74,17 @@ $('document').ready(function(){
       <h3>No response: the lending libraries have not yet responded to these requests</h3>
       <div id="mylistDiv"></div>
     </div>
+
+<div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ul>
+      <li>If a lending library has not yet responded to your request, that request will be shown here.</li>
+      <li>If there are more possible lenders, you'll see a 'Try next lender' button; otherwise, you'll see the message "No further sources".</li>
+      <li>You'll also have the option to cancel the request.</li>
+      <li>Remember that not all libraries are open every day; it may take a few days to get a response.</li>
+      <li>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order. The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</li>
+    </ul>
+</div>
 
 </div>
 
