--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -77,13 +77,6 @@ $('document').ready(function(){
 
 <div role="main">
 
-
-    <h2>Instructions</h2>
-    <ol>
-      <li>As books arrive from lending libraries to fill your ILL requests, click the 'Received' button for that book.</li>
-      <li>You will have the option of printing a date-due slip.</li>
-    </ol>
-
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
     </div>
@@ -101,6 +94,14 @@ $('document').ready(function(){
 
     <div id="multiPrint">
     </div>
+
+<div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>As books arrive from lending libraries to fill your ILL requests, click the 'Received' button for that book.</li>
+      <li>You will have the option of printing a date-due slip.</li>
+    </ol>
+</div>
 
 </div>
 
