--- a/templates/search/request.tmpl
+++ b/templates/search/request.tmpl
@@ -20,25 +20,21 @@
   }
 </script>
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
-  </div>
-
-  <div id="middlecontent">
     <form METHOD=POST ACTION="">
       <TMPL_IF NAME=error_sendmail>
-	<br />
+	
 	<h2>We've had a problem sending the email automatically</h2>
 	<p>fILL has encountered a problem sending this request.</p>
 	<p>You can send this request manually by using your
-	  own email program (eg: GMail, Outlook, Hotmail, etc).</p><br />
+	  own email program (eg: GMail, Outlook, Hotmail, etc).</p>
 	<ol>
 	  <li>Create a new email to the destination library (you can copy the email address from the "To:" field, below)</li>
 	  <li>Copy the information in the "Subject:" line, below, into the subject of your new email.</li>
 	  <li>Copy everything between the "--- copy from here ---" and "--- copy to here ---" lines, and paste that into the body of your new email.</li>
-	</ol><br />
-	<p>When you send that email, the destination library will have everything they need to process your request.</p><br />
+	</ol>
+	<p>When you send that email, the destination library will have everything they need to process your request.</p>
 	<hr>
       </TMPL_IF>
 
@@ -91,13 +87,16 @@
 	</TMPL_IF>
 
       <TMPL_ELSE>
-	<p><br /><p>
+
 	  <input type="submit" name="submit" value="Send it!">
       </TMPL_IF>
       <p><a href="?rm=results_form">Return to search results</a></p>
 
     </form>
+
+  <div id="instructions" class="tone-box">
   </div>
+
 
 </div>
 
