moved instructions under main cont

--- a/templates/search/new_patron_requests.tmpl
+++ b/templates/search/new_patron_requests.tmpl
@@ -69,7 +69,7 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
-  <div id="instructions" class="tone=box">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <p>These are requests from your patrons that have come in from the public side of fILL.</p>
     
