--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -67,17 +67,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <p>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</p><br/>
-    <p>For each of the requests that you are filling, click the "Sent" button.</p><br/>
-    <p>The "Oops!" button will return the request to the Respond list.</p><br/>
-    <p>Hover over a library's symbol to see the full name of the library.</p><br/>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -111,7 +101,14 @@ $('document').ready(function(){
 
     </div>
 
-  </div>
+
+<div id="instructions" class="tone-box">
+    <h3>Instructions</h3>
+    <p>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</p><br/>
+    <p>For each of the requests that you are filling, click the "Sent" button.</p><br/>
+    <p>The "Oops!" button will return the request to the Respond list.</p><br/>
+    <p>Hover over a library's symbol to see the full name of the library.</p><br/>
+</div>
 
 </div>
 
