--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -80,7 +80,7 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
-  <div class="tone-box">
+  <div id="instructions" class="tone-box">
     <h3>Instructions</h3>
     <ol>
       <li>If a lending library was unable to fill your request, that request will be shown here.</li>
