--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -74,7 +74,7 @@ $('document').ready(function(){
 <div role="main">
 
     <h3>Unfilled codes</h3>
-    <table style="border:1px solid black;border-collapse:collapse;">
+    <table id="fill-table">
       <tr><td style="border:1px solid black;">in-use /on-loan</td><td style="border:1px solid black;">Currently checked out to a patron.</td></tr>
       <tr><td style="border:1px solid black;">in-process</td><td style="border:1px solid black;">Not ready for loan.</td></tr>
       <tr><td style="border:1px solid black;">lost</td><td style="border:1px solid black;">Item has been declared missing.</td></tr>
