small sub menu test

--- a/htdocs/css/fILL-public-accessible.1.1a.css
+++ b/htdocs/css/fILL-public-accessible.1.1a.css
@@ -52,7 +52,7 @@
   	margin: 0em;
   	background-color: #06a0ca;
   	color: #fff;
-  	padding: ;
+  	padding: .3em;
   	text-decoration: none ;
   	display: inline ;
 }
@@ -64,7 +64,7 @@
 {
   	color: #000 ;
   	background-color: #fff ;
-  	padding: ;
+  	padding: .3em ;
   	text-decoration: none ;
   	display: inline ;
 }
