--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -103,9 +103,8 @@ $('document').ready(function(){
 <div id="header-right">
 
 
-  <div id="header_quick_access">
+  <div id="header_quick_access" class="header-library-info">
     <ul>
-      <li><a href="?rm=welcome">Home</a></li>
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
