add fill table to settings

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -55,7 +55,7 @@
 
     <br/>
 
-    <table border="1">
+    <table id="fill-table">
       <tr>
 	<td>
 	  <TMPL_IF NAME="editRequestEmailNotification">
