--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -7,7 +7,7 @@
   //-->
 </script>
 
-<div id="middlecontent">
+<div role="main">
   <h4><TMPL_VAR NAME="status"></h4>
   <form METHOD=POST ACTION="">
     <input TYPE="hidden" NAME="lid" VALUE="<TMPL_VAR NAME=editLID>">
