--- a/templates/logged_out.tmpl
+++ b/templates/logged_out.tmpl
@@ -1,13 +1,13 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
-
-<h1>Logged out</h1>
-<p>
-<p>Logged in as [<TMPL_VAR NAME="username">]</p>
-<p>Session id [<TMPL_VAR NAME="sessionid">]</p>
-<form METHOD=POST ACTION="">
-     <input TYPE="hidden" NAME="rm" VALUE="search_simple_ajax_form">
-     <input type="submit" name="submit" value="Log in" />
-</form>
-
+<div id="container">
+	<h1>Logged out</h1>
+	<p>
+	<p>Logged in as [<TMPL_VAR NAME="username">]</p>
+	<p>Session id [<TMPL_VAR NAME="sessionid">]</p>
+	<form METHOD=POST ACTION="">
+	     <input TYPE="hidden" NAME="rm" VALUE="search_simple_ajax_form">
+	     <input type="submit" name="submit" value="Log in" />
+	</form>
+</div>
 <TMPL_INCLUDE NAME="footer.tmpl">
