changes to my account

--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -155,8 +155,8 @@ function set_secondary_tab(tab_id) {
 
 </script>
 
-<div id="middlecontent">
-  <h4>Test my zServer</h4>
+<div role="main">
+  <h3>Test my zServer</h3>
 
   <div id="waitDiv">
     Testing... <img src="/wait.gif">
@@ -165,7 +165,8 @@ function set_secondary_tab(tab_id) {
   <div id="myDiv">
     <div id="mylistDiv">
       <p><strong>General</strong></p>
-      <table border="1" width="100%">
+
+<table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="success">...</td></tr>
 	<tr><td>libsym</td><td id="libsym">...</td></tr>
       </table>
