z server table change

--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -172,14 +172,16 @@ function set_secondary_tab(tab_id) {
       </table>
       <br/>
       <p><strong>Connection</strong></p>
-      <table border="1" width="100%">
+
+<table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_connection_success">...</td></tr>
 	<tr><td>connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
       <br/>
       <p><strong>Search</strong></p>
-      <table border="1" width="100%">
+
+<table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_search_success">...</td></tr>
 	<tr><td>type</td><td id="zServer_status_search_type">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_search_status">...</td></tr>
@@ -188,7 +190,8 @@ function set_secondary_tab(tab_id) {
       </table>
       <br/>
       <p><strong>Record</strong></p>
-      <table border="1" width="100%">
+
+<table id="fill-table">
 	<tr><td width="10%">success?...</td><td width="80%" id="zServer_status_record_success">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_record_status">...</td></tr>
 	<tr><td>author</td><td id="zServer_status_record_author">...</td></tr>
