--- a/templates/myaccount/test-zserver.tmpl
+++ b/templates/myaccount/test-zserver.tmpl
@@ -162,25 +162,23 @@ function set_secondary_tab(tab_id) {
     Testing... <img src="/wait.gif">
   </div>
 
-  <div id="myDiv">
-    <div id="mylistDiv">
-      <p><strong>General</strong></p>
-
+<div id="myDiv">
+  <div id="mylistDiv">
+    
+<h4>General</h4>
 <table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="success">...</td></tr>
 	<tr><td>libsym</td><td id="libsym">...</td></tr>
       </table>
-      <br/>
-      <p><strong>Connection</strong></p>
 
+<h4>Connection</h4>
 <table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_connection_success">...</td></tr>
 	<tr><td>connection</td><td id="zServer_status_connection_connectionString">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_connection_status">...</td></tr>
       </table>
-      <br/>
-      <p><strong>Search</strong></p>
 
+<h4>Search</h4>
 <table id="fill-table">
 	<tr><td width="10%">success?</td><td width="80%" id="zServer_status_search_success">...</td></tr>
 	<tr><td>type</td><td id="zServer_status_search_type">...</td></tr>
@@ -188,18 +186,17 @@ function set_secondary_tab(tab_id) {
 	<tr><td>pqf</td><td id="zServer_status_search_pqf">...</td></tr>
 	<tr><td># found</td><td id="zServer_status_search_found">...</td></tr>
       </table>
-      <br/>
-      <p><strong>Record</strong></p>
 
+<h4>Record</h4>
 <table id="fill-table">
 	<tr><td width="10%">success?...</td><td width="80%" id="zServer_status_record_success">...</td></tr>
 	<tr><td>status</td><td id="zServer_status_record_status">...</td></tr>
 	<tr><td>author</td><td id="zServer_status_record_author">...</td></tr>
 	<tr><td>title</td><td id="zServer_status_record_title">...</td></tr>
-      </table>
-      <br/>
-      <p><strong>Log</strong></p>
-      <p><PRE id="log">...</PRE></p>
+</table>
+
+<h4>Log</h4>
+<p><PRE id="log">...</PRE></p>
 
     </div>
   </div>
