patrons page html update

--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -98,18 +98,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <br/>
-    <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p><br/>
-    <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
-    <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
-    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p><br/>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -132,6 +121,13 @@ $('document').ready(function(){
       </div>
     </div>
 
+  <div id="instructions">
+    <h2>Instructions</h2>
+    <br/>
+    <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p><br/>
+    <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
+    <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).  Hit <strong>[ENTER]</strong> to complete the change.</p><br/>
+    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p><br/>
   </div>
 
 </div>
