--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -60,16 +60,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>Click on the email address to create a new email to the library.</li>
-    </ol>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="myDiv">
       <h3>Library contact information</h3>
@@ -103,8 +94,12 @@ $('document').ready(function(){
       </div>
     </div>
 
+  <div id="instructions">
+    <h2>Instructions</h2>
+    <ol>
+      <li>Click on the email address to create a new email to the library.</li>
+    </ol>
   </div>
-
 </div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
