removed container from my account sub menu

--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -94,7 +94,7 @@ $('document').ready(function(){
       </div>
     </div>
 
-  <div id="instructions">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
       <li>Click on the email address to create a new email to the library.</li>
