--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -2,11 +2,11 @@
 </div><!--div id container-->
 <footer role="contentinfo">
 <div id="nav2">
-  <ul>
-    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
-    <li><a href="?authen_logout=1">Log out</a></li>
-  </ul>
+    
+    <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
+
 </div>
+
 <img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
 </footer>
 
