--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -7,10 +7,9 @@
   //-->
 </script>
 
-<h1>Documents</h1>
-<br>
+<h2>Documents</h2>
 
-<table border="1">
+<table id="fill-table">
   <tr>
     <td>
       <h3>fILL Interlibrary Loan Management</h3>  
