--- a/templates/info/average-times.tmpl
+++ b/templates/info/average-times.tmpl
@@ -65,17 +65,8 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <p>This report looks at historic requests (those that have completed their life cycles) for the last 3 months.</p><br/>
-    <p>It examines the time differences between certain events (e.g. when the borrower made the request and when the lender responded to it).</p><br/>
-    <p>You can sort the table by clicking on the column headings. Clicking a column heading a second time will reverse the sort order.</p><br/>
-    <p>Values are rounded to the nearest day (or hour, depending on the column).  A value of "0" means the events happened (on average) on the same day.  A blank means that there were no events of that type.</p><br/>
-  </div>
-
-  <div id="middlecontent">
     <div id="waitDiv">
       Calculating averages for each library over the last 3 months... <img src="/wait.gif">
     </div>
@@ -83,6 +74,14 @@ $('document').ready(function(){
     <div id="myDiv">
       <h3>Average Handling Times</h3>
       <div id="mylistDiv"></div>
+  </div>
+
+  <div id="instructions">
+    <h2>Instructions</h2>
+    <p>This report looks at historic requests (those that have completed their life cycles) for the last 3 months.</p>
+    <p>It examines the time differences between certain events (e.g. when the borrower made the request and when the lender responded to it).</p>
+    <p>You can sort the table by clicking on the column headings. Clicking a column heading a second time will reverse the sort order.</p>
+    <p>Values are rounded to the nearest day (or hour, depending on the column).  A value of "0" means the events happened (on average) on the same day.  A blank means that there were no events of that type.</p>
   </div>
 
 </div>
