--- a/templates/info/report-folder.tmpl
+++ b/templates/info/report-folder.tmpl
@@ -124,16 +124,9 @@ $('document').ready(function(){
 
 </script>
 
-<div id="main">
+<div role="main">
 
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>None yet.</li>
-    </ol>
-  </div>
-
-  <div id="middlecontent" lid=<TMPL_VAR name="lid">>
+  <div lid=<TMPL_VAR name="lid">>
 
     <div id="myDiv">
       <h3>Report folder</h3>
@@ -182,6 +175,14 @@ $('document').ready(function(){
       </div>
     </div>
   </div>
+
+  <div id="instructions">
+    <h2>Instructions</h2>
+    <ol>
+      <li>None yet.</li>
+    </ol>
+  </div>
+
 </div>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
