--- a/templates/rotations/enter_stats.tmpl
+++ b/templates/rotations/enter_stats.tmpl
@@ -61,21 +61,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>[TAB] will take you to the next circ stat entry field.</li>
-      <li>[ENTER] will update the stat but leave you in the same field.</li>
-      <li> </li>
-      <li>You can also scan the item's barcode into the Search box to bring up just that item.</li>
-      <li> </li>
-      <li>Items will remain on this list until the next library in the rotation receives them.</li>
-    </ol>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -87,6 +73,16 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
+  <div id="instructions">
+    <h2>Instructions</h2>
+    <ol>
+      <li>[TAB] will take you to the next circ stat entry field.</li>
+      <li>[ENTER] will update the stat but leave you in the same field.</li>
+      <li> </li>
+      <li>You can also scan the item's barcode into the Search box to bring up just that item.</li>
+      <li> </li>
+      <li>Items will remain on this list until the next library in the rotation receives them.</li>
+    </ol>
   </div>
 
 </div>
