--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -92,7 +92,7 @@ $('document').ready(function(){
 <div id="container">
 
 <body class="example_alt_pagination" onload="domReady();">
-
+<p>&nbsp;</p>
 <div id="header" class="header-library">
     <div id="header-left">
       <div id="fill-logo"><a href="/cgi-bin/info.cgi?rm=welcome"><img src="/img/fill-lib-logo.png" alt="fill"></a></div>
