--- a/templates/rotations/admin/reports/item_circ_counts.tmpl
+++ b/templates/rotations/admin/reports/item_circ_counts.tmpl
@@ -59,16 +59,7 @@ $('document').ready(function(){
 </script>
 
 
-<div id="main">
-
-  <div id="leftcontent">
-    <h2>Instructions</h2>
-    <ol>
-      <li>Circs by item and library.</li>
-    </ol>
-  </div>
-
-  <div id="middlecontent">
+<div role="main">
 
     <div id="waitDiv">
       Loading... <img src="/wait.gif">
@@ -79,6 +70,11 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
+  <div id="instructions" class="tone-box">
+    <h2>Instructions</h2>
+    <ol>
+      <li>Circs by item and library.</li>
+    </ol>
   </div>
 
 </div>
