--- a/templates/rotations/enter_stats.tmpl
+++ b/templates/rotations/enter_stats.tmpl
@@ -73,7 +73,7 @@ $('document').ready(function(){
       <div id="mylistDiv"></div>
     </div>
 
-  <div id="instructions">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <ol>
       <li>[TAB] will take you to the next circ stat entry field.</li>
