changes to patron/library info in header

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -101,10 +101,8 @@ $('document').ready(function(){
 
   <!-- Not displayed on any page except lightning (at the moment) -->
 <div id="header-right">
-
-
-  <div id="header_quick_access" class="header-library-info">
       <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button">log out</a></div>
+  <div id="patron-info">
       <p><TMPL_VAR NAME="username"></p>
       <p id="library_name"><TMPL_VAR NAME="library"></p>
       <p id="lid"><TMPL_VAR NAME="lid"></p>
