removed tone box

--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -84,7 +84,7 @@ $('document').ready(function(){
   </div>
 
 
-  <div id="instructions" class="tone-box">
+  <div id="instructions">
     <h2>Instructions</h2>
 
     <h3>Borrowing</h3>
