--- a/templates/rotations/holdings_settings.tmpl
+++ b/templates/rotations/holdings_settings.tmpl
@@ -7,10 +7,7 @@
   //-->
 </script>
 
-<div id="leftcontent">
-</div>
-
-<div id="middlecontent">
+<div role="main">
   <h4><TMPL_VAR NAME="Holdings setup"></h4>
   <form METHOD=POST ACTION="">
     <table>
