--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -121,7 +121,7 @@ $('document').ready(function(){
       </div>
     </div>
 
-  <div id="instructions">
+  <div id="instructions" class="tone-box">
     <h2>Instructions</h2>
     <br/>
     <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p><br/>
